# librarian

./: Changelog.md  Pipfile  ReadMe.md  Security.md  librarian.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
static/: style.css
templates/: base.jinja  header.jinja  index.jinja
tests/: test_example.py
