[tool.black]
line-length = 120
skip-string-normalization = false
skip-magic-trailing-comma = true

[project]
name = "librarian"
version = "0.0.1"
description = "Easy to use documentation generator based on plugin-system"
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Topic :: Documentation",
    "Programming Language :: Python 3.10",
    "Topic :: Software Development :: "
]
dependencies = [
    "beautifulsoup4==4.11.1",
    "click==8.1.3",
    "Flask==2.2.2",
    "Flask-Cors==3.0.10",
    "requests==2.28.1",
    "rich==12.6.0",
    "toml==0.10.2",
    "Werkzeug==2.2.2",
]
authors = [
    { name= "AssertionBit", email="assertionbit@icloud.com" },
]
